Add a pointer in the text to the figure.

--- a/sections/model.tex
+++ b/sections/model.tex
@@ -57,7 +57,8 @@ One of the few ground truths available in the provided data is the distribution
 of the total length of stay. Given that the length of stay and resource
 availability are connected, the approach here will be to simulate the length of
 stay distribution for a range of values \(p_i\) and \(c\) in order to find the
-parameters that best match the observed data.
+parameters that best match the observed data. A diagram depicting the process
+described in this section is provided in Figure~\ref{fig:process}.
 
 The statistical comparison of two or more distributions can be done in a number
 of ways. Such methods include the Kolmogorov-Smirnov test, a variety of
