Move argmin inside process.sty for standalone

--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,6 @@
 
 % Mathematics, symbols
 \usepackage{amssymb}
-\usepackage{amsmath}
-    \DeclareMathOperator*{\argmin}{arg\,min}
 \usepackage{pgf, interval}
     \intervalconfig{soft open fences}
 
@@ -29,7 +27,7 @@
 % Mathematics
 \usepackage{amssymb}
 
-% TiKz
+% TiKz (and argmin)
 \usepackage{tex/process}
 
 % Custom lengths
