--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,6 @@
 
 % Mathematics, symbols
 \usepackage{amssymb}
-\usepackage{amsmath}
-    \DeclareMathOperator*{\argmin}{arg\,min}
 \usepackage{pgf, interval}
     \intervalconfig{soft open fences}
 
@@ -23,10 +21,14 @@
 \usepackage{booktabs}
     \renewcommand{\arraystretch}{1.3}
 \usepackage{caption}
+\usepackage{standalone}
 \usepackage{subcaption}
 
 % Mathematics
 \usepackage{amssymb}
+
+% TiKz (and argmin)
+\usepackage{tex/process}
 
 % Custom lengths
 \newlength{\imgwidth}
@@ -36,8 +38,7 @@
 
 \title{%
     Segmentation analysis and the recovery of queuing parameters via the
-    Wasserstein distance: a study of administrative data for COPD patients from
-    the Cwm Taf region
+    Wasserstein distance: a study of administrative data for COPD patients
 }
 \author{}
 \date{}
