Add in citation for Github repo; clear up TODOs.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -495,6 +495,15 @@
     primaryClass = {cs.LG},
 }
 
+@misc{Wilde2020github,
+  author       = {Henry Wilde},
+  title        = {{daffidwilde/copd-paper}},
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {v0.0.1},
+  doi          = {10.5281/zenodo.3936480},
+}
+
 @misc{Wilde2020results,
   author       = {Wilde, Henry and
                   Knight, Vincent and
