--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -36,8 +36,9 @@ its parameters; Section~\ref{sec:scenarios} presents a number of what-if
 scenarios with insight provided by the model parameterisation and the
 clustering; Section~\ref{sec:conclusion} concludes the paper. Although the data
 is confidential and may not be published, a synthetic analogue has been
-archived~\cite{Wilde2020synthetic} and the source code used in this paper is
-available online at~\url{https://github.com/daffidwilde/copd-paper}.
+archived~\cite{Wilde2020synthetic} along with all of the source code used in
+this paper~\cite{Wilde2020github}.
+
 
 \subsection{Literature review}\label{subsec:review}
 
