--- a/sections/scenarios.tex
+++ b/sections/scenarios.tex
@@ -24,8 +24,8 @@ by the corresponding median value in the base case meaning that a metric having
 a value of 1 is `normal'.
 
 As mentioned in Section~\ref{sec:intro}, the source code used throughout this
-work is available online and has been archived. %TODO Add citation for repo
-In addition to this, the datasets generated from the simulations in this section
+work is available online and has been archived online~\cite{Wilde2020github}. In
+addition to this, the datasets generated from the simulations in this section
 have been archived along with those generated from the parameter
 sweep~\cite{Wilde2020results}.
 
