Update repo citation.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -497,11 +497,11 @@
 
 @misc{Wilde2020github,
   author       = {Henry Wilde},
-  title        = {{daffidwilde/copd-paper}},
+  title        = {{GitHub repository: daffidwilde/copd-paper}},
   year         = 2020,
   publisher    = {Zenodo},
-  version      = {v0.0.1},
-  doi          = {10.5281/zenodo.3936480},
+  version      = {v0.0.2},
+  doi          = {10.5281/zenodo.3937548},
 }
 
 @misc{Wilde2020results,
