Add author list to paper.

--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,7 @@
     Segmentation analysis and the recovery of queuing parameters via the
     Wasserstein distance: a study of administrative data for COPD patients
 }
-\author{}
+\author{Henry Wilde, Jonathan Gillard, Vincent Knight, Kendal Smith}
 \date{}
 
 
