--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,29 +1,27 @@
 \begin{abstract}
     This work uses a data-driven approach to analyse how the resource
-    requirements of a population of COPD patients in the South Wales area may
-    change, and quantifies how those changes affect the strains of the hospital
-    system the population interacts with. This is done using a novel combination
-    of often distinct modes of analysis: segmentation, operational queuing
-    theory, and the recovery of queuing parameters from incomplete data. By
+    requirements of patients with chronic obstructive pulmonary disease (COPD)
+    may change, and quantifies how those changes affect the strains of the
+    hospital system the patients interact with. This is done using a novel
+    combination of often distinct modes of analysis: segmentation, operational
+    queuing theory, and the recovery of parameters from incomplete data. By
     combining these methods as presented here, it is demonstrated how the
     potential limitations around the availability of fine-grained data can be
-    overcome in operational research. That is, despite only using administrative
-    hospital spell data, useful operational results are found.
+    overcome in operational research. That is, despite using only administrative
+    data, useful operational results are found.
 
     The paper begins by finding an effective clustering of the population from
-    this granular data that feeds into a multi-class \(M/M/c\) model, the
-    parameters of which are recovered from the available data via a 
-    parameterisation and the Wasserstein distance. This model is then used to
-    conduct a substantial and informative analysis of the underlying queuing
-    system and the needs of the population under study through the simulation of
-    several `what-if' scenarios.
+    this granular data that feeds into a multi-class \(M/M/c\) model, whose
+    parameters are recovered from the data via parameterisation and the
+    Wasserstein distance. This model is then used to conduct an informative
+    analysis of the underlying queuing system and the needs of the population
+    under study through several `what-if' scenarios.
 
-    The particular set of analyses used to form and study this model
-    considers, in effect, all types of patient arrivals as well as how those types
-    each impact the system. With that, this study finds that there are no quick
-    solutions to reduce the impact of COPD patients on the system, including
-    adding capacity to the system. In fact, the only effective intervention to
-    reduce the strains of the COPD population is to enact some external policy
-    that directly improves the overall health of the COPD population before
-    arriving at the hospital.
+    The particular analyses used to form and study this model considers, in
+    effect, all types of patient arrivals and how those types impact the system.
+    With that, this study finds that there are no quick solutions to reduce the
+    impact of COPD patients on the system, including adding capacity to the
+    system. In fact, the only effective intervention to reduce the strains of
+    the COPD population is to enact some external policy that directly improves
+    the overall health of the COPD population before arriving at the hospital.
 \end{abstract}
