--- a/submission/main.tex
+++ b/submission/main.tex
@@ -1277,6 +1277,377 @@ external, preventative policy that improves the overall health of COPD patients.
 The authors wish to thank the Cwm Taf Morgannwg University Health Board for
 their funding and support of the Ph.D. of which this work has formed a part.
 
-\bibliography{bibliography}
+\begin{thebibliography}{10}
+
+\bibitem{Arnolds2018}
+I.~V. Arnolds and D.~Gartner.
+\newblock Improving hospital layout planning through clinical pathway mining.
+\newblock {\em Annals of Operations Research}, 263:453--477, 2018.
+\newblock \href {https://doi.org/10.1007/s10479-017-2485-4}
+  {\path{doi:10.1007/s10479-017-2485-4}}.
+
+\bibitem{Asanjarani2017}
+A.~Asanjarani, Y.~Nazarathy, and P.~Pollett.
+\newblock Parameter and state estimation in queues and related stochastic
+  models: A bibliography, 2017 (accessed \today).
+\newblock URL:
+  \url{https://people.smp.uq.edu.au/PhilipPollett/papers/Qest/QEstAnnBib.pdf}.
+
+\bibitem{Bhattacharjee2014}
+P.~Bhattacharjee and P.~K. Ray.
+\newblock Patient flow modelling and performance analysis of healthcare
+  delivery processes in hospitals: A review and reflections.
+\newblock {\em Computers \& Industrial Engineering}, 78:299--312, 2014.
+\newblock \href {https://doi.org/10.1016/j.cie.2014.04.016}
+  {\path{doi:10.1016/j.cie.2014.04.016}}.
+
+\bibitem{Brailsford2013}
+S.~C. Brailsford, T.~B. Bolt, G.~Bucci, T.~M. Chaussalet, N.~A. Connell, P.~R.
+  Harper, J.~H. Klein, M.~Pitt, and M.~Taylor.
+\newblock Overcoming the barriers: A qualitative study of simulation adoption
+  in the {NHS}.
+\newblock {\em Journal of the Operational Research Society}, 64(2):157--168,
+  2013.
+
+\bibitem{Collins2018}
+P.~F. Collins, R.~J. Stratton, R.~J. Kurukulaaratchy, and M.~Elia.
+\newblock Influence of deprivation on health care use, health care costs, and
+  mortality in {COPD}.
+\newblock {\em International Journal of Chronic Obstructive Pulmonary Disease},
+  13:1289--1296, 2018.
+\newblock \href {https://doi.org/10.2147/COPD.S157594}
+  {\path{doi:10.2147/COPD.S157594}}.
+
+\bibitem{Delias2015}
+P.~Delias, M.~Doumpos, E.~Grigoroudis, P.~Manolitzas, and N.~Matsatsinis.
+\newblock Supporting healthcare management decisions via robust clustering of
+  event logs.
+\newblock {\em Knowledge-Based Systems}, 84:203--213, 2015.
+\newblock \href {https://doi.org/10.1016/j.knosys.2015.04.012}
+  {\path{doi:10.1016/j.knosys.2015.04.012}}.
+
+\bibitem{Djabali2018}
+Y.~Djabali, B.~Rabta, and D.~Aissani.
+\newblock Approximating service-time distributions by phase-type distributions
+  in single-server queues: A strong stability approach.
+\newblock {\em International Journal of Mathematics in Operational Research},
+  12:507--531, 2018.
+\newblock \href {https://doi.org/10.1504/IJMOR.2018.10005095}
+  {\path{doi:10.1504/IJMOR.2018.10005095}}.
+
+\bibitem{Erlang1917}
+A.~K. Erlang.
+\newblock Solution of some problems in the theory of probabilities of
+  significance in automatic telephone exchanges.
+\newblock {\em Post Office Electrical Engineer's Journal}, 10:189--197, 1917.
+
+\bibitem{Erlang1920}
+A.~K. Erlang.
+\newblock Telephone waiting times.
+\newblock {\em Matematisk Tidsskrift, B}, 31:25, 1920.
+
+\bibitem{Everitt2011}
+B.~S. Everitt, S.~Landau, M.~Leese, and D.~Stahl.
+\newblock {\em Cluster analysis}.
+\newblock John Wiley \& Sons, 2011.
+
+\bibitem{Fitzpatrick2019}
+B.~G. Fitzpatrick.
+\newblock Issues in reproducible simulation research.
+\newblock {\em Bulletin of Mathematical Biology}, 81:1--6, 2019.
+\newblock \href {https://doi.org/10.1007/s11538-018-0496-1}
+  {\path{doi:10.1007/s11538-018-0496-1}}.
+
+\bibitem{Goldenshluger2016}
+A.~Goldenshluger.
+\newblock Nonparametric estimation of the service time distribution in the
+  {M/G/$\infty$} queue.
+\newblock {\em Advances in Applied Probability}, 48(4):1117--1138, 2016.
+\newblock \href {https://doi.org/10.1017/apr.2016.67}
+  {\path{doi:10.1017/apr.2016.67}}.
+
+\bibitem{Hagenaars2002}
+J.~A. Hagenaars.
+\newblock {\em Applied Latent Class Analysis}.
+\newblock Cambridge University Press, 2002.
+\newblock \href {https://doi.org/10.1017/CBO9780511499531}
+  {\path{doi:10.1017/CBO9780511499531}}.
+
+\bibitem{Harper2006}
+P.~R. Harper and D.~Winslett.
+\newblock Classification trees: A possible method for maternity risk grouping.
+\newblock {\em European Journal of Operational Research}, 169:146--156, 2006.
+\newblock \href {https://doi.org/10.1016/j.ejor.2004.05.014}
+  {\path{doi:10.1016/j.ejor.2004.05.014}}.
+
+\bibitem{Houben2019}
+S.~Houben-Wilke, F.~J.~J. Triest, F.~M. Franssen, D.~J. Janssen, E.~F. Wouters,
+  and L.~E. Vanfleteren.
+\newblock Revealing methodological challenges in chronic obstructive pulmonary
+  disease studies assessing comorbidities: A narrative review.
+\newblock {\em Chronic Obstructive Pulmonary Diseases: Journal of the COPD
+  Foundation}, 6(2):166--177, 2019.
+\newblock \href {https://doi.org/10.15326/jcopdf.6.2.2018.0145}
+  {\path{doi:10.15326/jcopdf.6.2.2018.0145}}.
+
+\bibitem{Huang1998}
+Z.~Huang.
+\newblock Extensions to the $k$-means algorithm for clustering large data sets
+  with categorical values.
+\newblock {\em Data Mining and Knowledge Discovery}, 2(3):283--304, 1998.
+\newblock \href {https://doi.org/10.1023/A:1009769707641}
+  {\path{doi:10.1023/A:1009769707641}}.
+
+\bibitem{Ivie2018}
+P.~Ivie and D.~Thain.
+\newblock Reproducibility in scientific computing.
+\newblock {\em ACM Computing Surveys}, 51(3), 2018.
+\newblock \href {https://doi.org/10.1145/3186266} {\path{doi:10.1145/3186266}}.
+
+\bibitem{Komashie2015}
+A.~Komashie, A.~Mousavi, P.~J. Clarkson, and T.~Young.
+\newblock An integrated model of patient and staff satisfaction using queuing
+  theory.
+\newblock {\em IEEE Journal of Translational Engineering in Health and
+  Medicine}, 3:1--10, 2015.
+\newblock \href {https://doi.org/10.1109/JTEHM.2015.2400436}
+  {\path{doi:10.1109/JTEHM.2015.2400436}}.
+
+\bibitem{Kullback1951}
+S.~Kullback and R.~A. Leibler.
+\newblock On information and sufficiency.
+\newblock {\em Annals of Mathematical Statistics}, 22(1):79--86, 1951.
+\newblock \href {https://doi.org/10.1214/aoms/1177729694}
+  {\path{doi:10.1214/aoms/1177729694}}.
+
+\bibitem{Kuwornu2014}
+J.~P. Kuwornu, L.~M. Lix, and S.~Shooshtari.
+\newblock Multimorbidity disease clusters in {Aboriginal} and {non-Aboriginal}
+  {Caucasian} populations in {Canada}.
+\newblock {\em Chronic Diseases and Injuries in Canada}, 34(4):218--225, 2014.
+
+\bibitem{Larsen2017}
+F.~B. Larsen, M.~H. Pedersen, K.~Friis, C.~Gl\"{u}mer, and M.~Lasgaard.
+\newblock A latent class analysis of multimorbidity and the relationship to
+  socio-demographic factors and health-related quality of life. a national
+  population-based study of 162,283 {Danish} adults.
+\newblock {\em PLoS One}, 12(1), 2017.
+\newblock \href {https://doi.org/10.1371/journal.pone.0169426}
+  {\path{doi:10.1371/journal.pone.0169426}}.
+
+\bibitem{Lazarsfeld1968}
+P.~F. Lazarsfeld and N.~W. Henry.
+\newblock {\em Latent structure analysis}.
+\newblock Houghton Mifflin Co., 1968.
+
+\bibitem{McClain1976}
+J.~O. McClain.
+\newblock Bed planning using queuing theory models of hospital occupancy: A
+  sensitivity analysis.
+\newblock {\em Inquiry}, 13(2):167--176, 1976.
+
+\bibitem{Mohammadi2012}
+A.~Mohammadi and M.~R. Salehi-Rad.
+\newblock Bayesian inference and prediction in an {$M/G/1$} with optional
+  second service.
+\newblock {\em Communications in Statistics - Simulation and Computation},
+  41(3):419--435, 2012.
+\newblock \href {https://doi.org/10.1080/03610918.2011.588358}
+  {\path{doi:10.1080/03610918.2011.588358}}.
+
+\bibitem{NHS2020}
+{NHS Data Model and Dictionary}.
+\newblock {NHS Business Definitions: Hospital Provider Spell}, 2020 (accessed
+  \today).
+\newblock URL:
+  \url{https://www.datadictionary.nhs.uk/data_dictionary/nhs_business_definitions/h/hospital_provider_spell_de.asp}.
+
+\bibitem{Olafsson2008}
+S.~Olafsson, X.~Li, and S.~Wu.
+\newblock Operations research and data mining.
+\newblock {\em European Journal of Operational Research}, 87(3):1429--1448,
+  2008.
+\newblock \href {https://doi.org/https://doi.org/10.1016/j.ejor.2006.09.023}
+  {\path{doi:https://doi.org/10.1016/j.ejor.2006.09.023}}.
+
+\bibitem{Palmer2019}
+G.~I. Palmer, V.~A. Knight, P.~R. Harper, and A.~L. Hawa.
+\newblock Ciw: An open-source discrete event simulation library.
+\newblock {\em Journal of Simulation}, 13(1):68--82, 2019.
+\newblock \href {https://doi.org/10.1080/17477778.2018.1473909}
+  {\path{doi:10.1080/17477778.2018.1473909}}.
+
+\bibitem{Palvannan2012}
+R.~K. Palvannan and K.~L. Teow.
+\newblock Queueing for healthcare.
+\newblock {\em Journal of Medical Systems}, 36:541--547, 2012.
+\newblock \href {https://doi.org/10.1007/s10916-010-9499-7}
+  {\path{doi:10.1007/s10916-010-9499-7}}.
+
+\bibitem{Pinto2014}
+L.~R. {Pinto}, F.~C.~C. {de Campos}, I.~H.~O. {Perp\'{e}tuo}, and Y.~C. N.
+  M.~B. {Ribeiro}.
+\newblock Analysis of hospital bed capacity via queuing theory and simulation.
+\newblock In {\em Proceedings of the Winter Simulation Conference 2014}, pages
+  1281--1292, 2014.
+
+\bibitem{Ramdas2017}
+A.~Ramdas, N.~G. Trillos, and M.~Cuturi.
+\newblock On {W}asserstein two-sample testing and related families of
+  nonparametric tests.
+\newblock {\em Entropy}, 19(2):47, 2017.
+\newblock \href {https://doi.org/10.3390/e19020047}
+  {\path{doi:10.3390/e19020047}}.
+
+\bibitem{Rebuge2012}
+{\'A}.~Rebuge and D.~R. Ferreira.
+\newblock Business process analysis in healthcare environments: A methodology
+  based on process mining.
+\newblock {\em Information Systems}, 37(2):99--116, 2012.
+\newblock \href {https://doi.org/10.1016/j.is.2011.01.003}
+  {\path{doi:10.1016/j.is.2011.01.003}}.
+
+\bibitem{Satopaa2011}
+V.~Satopaa, J.~Albrecht, D.~Irwin, and B.~Raghavan.
+\newblock Finding a `kneedle' in a haystack: Detecting knee points in system
+  behavior.
+\newblock In {\em Proceedings of the 2011 31st International Conference on
+  Distributed Computing Systems Workshops}, pages 166--171, 2011.
+\newblock \href {https://doi.org/10.1109/ICDCSW.2011.20}
+  {\path{doi:10.1109/ICDCSW.2011.20}}.
+
+\bibitem{Sexton2016}
+E.~Sexton and D.~Bedford.
+\newblock {GP} supply, deprivation and emergency admission to hospital for
+  {COPD} and diabetes complications in counties across {Ireland}: An
+  exploratory analysis.
+\newblock {\em Irish Journal of Medical Science}, 185(2):453--461, 2016.
+\newblock \href {https://doi.org/10.1007/s11845-015-1359-5}
+  {\path{doi:10.1007/s11845-015-1359-5}}.
+
+\bibitem{Simon2011}
+T.~Simon-Tuval, S.~M. Scharf, N.~Maimon, B.~J. Bernhard-Scharf, H.~Reuveni, and
+  A.~Tarasiuk.
+\newblock Determinants of elevated healthcare utilization in patients with
+  {COPD}.
+\newblock {\em Respiratory Research}, 12(7), 2011.
+\newblock \href {https://doi.org/10.1186/1465-9921-12-7}
+  {\path{doi:10.1186/1465-9921-12-7}}.
+
+\bibitem{Steiner2017}
+M.~C. Steiner, D.~Lowe, K.~Beckford, J.~Blakey, C.~E. Bolton, S.~Elkin,
+  W.~D.~C. Man, C.~M. Roberts, L.~Sewell, P.~Walker, and S.~J. Singh.
+\newblock Socioeconomic deprivation and the outcome of pulmonary rehabilitation
+  in {England} and {Wales}.
+\newblock {\em Thorax}, 72(6):530--537, 2017.
+\newblock \href {https://doi.org/10.1136/thoraxjnl-2016-209376}
+  {\path{doi:10.1136/thoraxjnl-2016-209376}}.
+
+\bibitem{Steins2013}
+K.~Steins and S.~Walther.
+\newblock A generic simulation model for planning critical care resource
+  requirements.
+\newblock {\em Anaesthesia}, 68(11):1148--1155, 2013.
+
+\bibitem{Vaserstein1969}
+L.~N. Vaserstein.
+\newblock Markov processes over denumerable products of spaces describing large
+  systems of automata.
+\newblock {\em Problemy Pereda{\v{c}}hi Informatsii}, 5(3):64--72, 1969.
+
+\bibitem{Vuik2016b}
+S.~I. Vuik, E.~K. Mayer, and A.~Darzi.
+\newblock Patient segmentation analysis offers significant benefits for
+  integrated care and support.
+\newblock {\em Health Affairs}, 35(5):769--775, 2016.
+\newblock \href {https://doi.org/10.1377/hlthaff.2015.1311}
+  {\path{doi:10.1377/hlthaff.2015.1311}}.
+
+\bibitem{Vuik2016a}
+S.~I. Vuik, E.~K. Mayer, and A.~Darzi.
+\newblock A quantitative evidence base for population health: Applying
+  utilization-based cluster analysis to segment a patient population.
+\newblock {\em Population Health Metrics}, 14, 2016.
+\newblock \href {https://doi.org/10.1186/s12963-016-0115-z}
+  {\path{doi:10.1186/s12963-016-0115-z}}.
+
+\bibitem{Wilde2020github}
+H.~Wilde.
+\newblock {GitHub repository: daffidwilde/copd-paper}, 2020.
+\newblock \href {https://doi.org/10.5281/zenodo.3937548}
+  {\path{doi:10.5281/zenodo.3937548}}.
+
+\bibitem{Wilde2020results}
+H.~Wilde, V.~Knight, and J.~Gillard.
+\newblock {Experiment data in support of `Recovering hospital service times via
+  the Wasserstein distance for segmentation analysis: a study in COPD patients
+  in the Cwm Taf region'}, 2020.
+\newblock \href {https://doi.org/10.5281/zenodo.3924716}
+  {\path{doi:10.5281/zenodo.3924716}}.
+
+\bibitem{Wilde2020}
+H.~Wilde, V.~Knight, and J.~Gillard.
+\newblock A novel initialisation based on hospital-resident assignment for the
+  k-modes algorithm, 2020.
+\newblock \href {http://arxiv.org/abs/2002.02701} {\path{arXiv:2002.02701}}.
+
+\bibitem{Wilde2020synthetic}
+H.~Wilde, V.~Knight, and J.~Gillard.
+\newblock {Synthetic LOS and interarrival time data for COPD patients in the
+  Cwm Taf region}, 2020.
+\newblock \href {https://doi.org/10.5281/zenodo.3908167}
+  {\path{doi:10.5281/zenodo.3908167}}.
+
+\bibitem{Williams2015}
+J.~Williams, S.~Dumont, J.~Parry-Jones, I.~Komenda, J.~Griffiths, and
+  V.~Knight.
+\newblock Mathematical modelling of patient flows to predict critical care
+  capacity required following the merger of two district general hospitals into
+  one.
+\newblock {\em Anaesthesia}, 70(1):32--40, 2015.
+\newblock \href {https://doi.org/10.1111/anae.12839}
+  {\path{doi:10.1111/anae.12839}}.
+
+\bibitem{Wu2009}
+X.~Wu and V.~Kumar.
+\newblock {\em The top ten algorithms in data mining}.
+\newblock CRC press, 2009.
+
+\bibitem{Yan2018}
+S.~Yan, Y.~H. Kwan, C.~S. Tan, J.~Thumboo, and L.~L. Low.
+\newblock A systematic review of the clinical application of data-driven
+  population segmentation analysis.
+\newblock {\em BMC Medical Research Methodology}, 18(121), 2018.
+\newblock \href {https://doi.org/10.1186/s12874-018-0584-9}
+  {\path{doi:10.1186/s12874-018-0584-9}}.
+
+\bibitem{Yan2019}
+S.~Yan, B.~J.~J. Seng, Y.~H. Kwan, C.~S. Tan, J.~H.~M. Quah, J.~Thumboo, and
+  L.~L. Low.
+\newblock Identifying heterogeneous health profiles of primary care utilizers
+  and their differential healthcare utilization and mortality – a
+  retrospective cohort study.
+\newblock {\em BMC Family Practice}, 20(54), 2019.
+\newblock \href {https://doi.org/10.1186/s12875-019-0939-2}
+  {\path{doi:10.1186/s12875-019-0939-2}}.
+
+\bibitem{Yom2014}
+G.~B. Yom-Tov and A.~Mandelbaum.
+\newblock {Erlang-R}: A time-varying queue with reentrant customers, in support
+  of healthcare staffing.
+\newblock {\em Manufacturing \& Service Operations Management}, 16(2):283--299,
+  2014.
+\newblock \href {https://doi.org/10.1287/msom.2013.0474}
+  {\path{doi:10.1287/msom.2013.0474}}.
+
+\bibitem{Yoon2020}
+S.~Yoon, H.~Goh, Y.~H. Kwan, J.~Thumboo, and L.~L. Low.
+\newblock Identifying optimal indicators and purposes of population
+  segmentation through engagement of key stakeholders: A qualitative study.
+\newblock {\em Health Res Policy Syst.}, 18(1):26, 2020.
+\newblock \href {https://doi.org/10.1186/s12961-019-0519-x}
+  {\path{doi:10.1186/s12961-019-0519-x}}.
+
+\end{thebibliography}
 
 \end{document}
