Start grammatical clean-up.

--- a/submission/main.tex
+++ b/submission/main.tex
@@ -154,33 +154,32 @@
     effect, all types of patient arrivals and how those types impact the system.
     With that, this study finds that there are no quick solutions to reduce the
     impact of COPD patients on the system, including adding capacity to the
-    system. In fact, the only effective intervention to reduce the strains of
-    the COPD population is to enact some external policy that directly improves
-    the overall health of the COPD population before arriving at the hospital.
+    system. The only effective intervention to reduce the strain caused by those
+    presenting with COPD is, in fact, to enact external policies which directly
+    improve the health of the COPD population before their arrival in hospital.
 \end{abstract}
 
 \section{Introduction}\label{sec:intro}
 
-Population health research is becoming increasingly based on data-driven methods
-(as opposed to those designed solely by clinical experts) for patient-centred
-care through the advent of accessible software and a relative abundance of
-electronic data. However, many such methods rely heavily on detailed data ---
-about both the healthcare system and its population --- which may limit research
-where sophisticated data pipelines are not yet in place.
+Population health research is increasingly based on data-driven methods (as
+opposed to those designed solely by clinical experts) for patient-centred care
+through the advent of accessible software and a relative abundance of electronic
+data. However, many such methods rely heavily on detailed data --- about both
+the healthcare system and its population --- which may limit research where
+sophisticated data pipelines are not yet in place.
 
-This work demonstrates how this issue may be overcome using routinely gathered,
-administrative hospital data. This data is used to build a clustering that feeds
-into a multi-class queuing model. This approach allows for the better
-understanding of the healthcare population and the system they are interacting
-with.  Specifically, this work examines records of patient spells from the
-National Health Service (NHS) Wales Cwm Taf Morgannwg University Health Board
-(UHB) that present chronic obstructive pulmonary disease (COPD). COPD is a
-condition of particular interest to population health research, and to Cwm Taf
-Morgannwg UHB, as it is known to often present as a comorbidity in
-patients~\cite{Houben2019}, increasing the complexity of those suffering with
-the condition. In addition, it was found that the Cwm Taf Morgannwg UHB had the
-highest prevalence of the condition across all the Welsh health boards in an
-internal report by NHS Wales.
+This work demonstrates how this issue may be overcome, by using routinely
+gathered, administrative, hospital data to build a clustering that feeds into a
+multi-class queuing model. This approach allows for the better understanding of
+the healthcare population and the system with which they interact. Specifically,
+this work examines records of patient spells from the National Health Service
+(NHS) Wales Cwm Taf Morgannwg University Health Board (UHB) which present
+chronic obstructive pulmonary disease (COPD). COPD is a condition of particular
+interest to population health research, and to Cwm Taf Morgannwg UHB, as it
+often presents as a comorbidity in patients~\cite{Houben2019}, increasing the
+complexity for those suffering with the condition. In addition, it was found
+that the Cwm Taf Morgannwg UHB had the highest prevalence of the condition
+across all the Welsh health boards in an internal report by NHS Wales.
 
 The contents of this work has been drawn from several overlapping sources within
 mathematical research, and this work contributes to the literature in three
